# clpd

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  USAGE.md
.github/workflows/: build.yml
src/: cli.rs  crypto.rs  database.rs  main.rs  middleware.rs  models.rs  tui.rs  watcher.rs
