[package]
name = "clpd"
version = "0.1.0"
edition = "2024"

[profile.full]
inherits = "release"
strip = true
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
# dev profile for _other_ packages are optimized, as these
# are unlikely to change or need debugging, so we can speed up
# compilation by optimizing them. This is especially useful for
# large codebases with many dependencies.
# comment this out if needing to debug _other_ packages
[profile.dev.package."*"]
opt-level = 3
debug = true
# setting the test opt to maximum, tweak this if needed
# [profile.test]
# opt-level = 3

[dependencies]
blake3 = { version = "1.6.0", features = ["rayon"] }
base64 = "0.21.4"
sled = "0.34"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
parking_lot = { version = "0.12.4", features = [
    "hardware-lock-elision",
    "serde",
] }
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
zeroize = "1.8"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
rpassword = "7.3"
hex = "0.4"
dirs = "5.0"
csv = "1.3"
image = "0.25"
ratatui = "0.29.0"
crossterm = "0.28"
serde_json = "1.0.138"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
actix-http = { version = "3.11.0" }
actix-rt = { version = "2.8.0" }
actix-web = { version = "4.11.0" }
reqwest = { version = "0.12.19", features = ["json"] }
actix-service = { version = "2.0.2" }
windows-service = { version = "0.8.0" }
futures = "0.3.31"
actix-cors = { version = "0.7.1" }
futures-util = "0.3.31"
futures-channel = "0.3.31"
flate2 = "1.1.4"
mimalloc = "0.1.48"
[dev-dependencies]
tempfile = "3.8"
